--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,10 +13,74 @@ label {
 }
 
 html {
-  font-family: 'Ubuntu Mono', monospace;
+  font-family: "Ubuntu Mono", monospace;
   font-size: 18px;
 }
 
 body {
   background: $c-gray;
+}
+
+.slider {
+  padding: 20px;
+  
+  &__wrapper {
+    background-color: cornflowerblue;
+    height: 50px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__ruler {
+    width: 100%;
+    height: 20px;
+    margin: 0 15px;
+    display: flex;
+    align-items: center;
+    position: relative;
+
+    background-color: rgb(58, 58, 88);
+    border: 1px solid #00ffa1;
+    border-radius: 5px;
+  }
+
+  &__fill {
+    width: 20%;
+    height: 20px;
+    transition: width ease 0.2s;
+    background-color: cyan;
+  }
+
+  &__thumb {
+    width: 35px;
+    height: 40px;
+    position: absolute;
+    left: 20%;
+
+    transition: left ease 0.2s;
+    transform: translateX(-50%);
+    background-color: rgb(52, 122, 139);
+    border: 1px solid #00ffa1;
+    border-radius: 5px;
+  }
+
+  &__tooltip {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: -32px;
+    transition: left ease 0.1s;
+    transform: translateX(-50%);
+  }
+
+}
+
+input {
+  margin-bottom: 20px;
+  padding-left: 3px;
+}
+
+.label {
+  display: inline-block;
+  width: 40px;
 }
