--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,13 +12,24 @@ label {
   box-sizing: border-box;
 }
 
-html {
+html,
+input {
   font-family: "Ubuntu Mono", monospace;
   font-size: 18px;
 }
 
 body {
   background: $c-gray;
+}
+
+input {
+  margin-bottom: 20px;
+  padding-left: 3px;
+}
+
+.label {
+  display: inline-block;
+  width: 40px;
 }
 
 .slider {
@@ -44,43 +55,41 @@ body {
     border-radius: 5px;
   }
 
+  &__ruler:hover {
+    cursor: pointer;
+  }
+
   &__fill {
-    width: 20%;
+    width: 0%;
     height: 20px;
-    transition: width ease 0.2s;
+    position: absolute;
+
     background-color: cyan;
+    // transition: width ease 0.1s;
   }
 
   &__thumb {
-    width: 35px;
-    height: 40px;
+    width: 25px;
+    height: 30px;
     position: absolute;
-    left: 20%;
-
-    transition: left ease 0.2s;
+    left: 0%;
     transform: translateX(-50%);
-    background-color: rgb(52, 122, 139);
+
+    background-color: #1aabcf;
     border: 1px solid #00ffa1;
     border-radius: 5px;
+    box-shadow: 0 0 10px black;
+    // transition: left ease 0.1s;
   }
-
+  
   &__tooltip {
     width: 20px;
     height: 20px;
     position: absolute;
-    top: -32px;
-    transition: left ease 0.1s;
     transform: translateX(-50%);
+    top: -32px;
+
+    visibility: hidden;
+    // transition: left ease 0.1s;
   }
-
-}
-
-input {
-  margin-bottom: 20px;
-  padding-left: 3px;
-}
-
-.label {
-  display: inline-block;
-  width: 40px;
 }
